[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gloe"
version = "0.5.5"
authors = [
  { name="Samir Braga", email="samirchavess@gmail.com" },
]
description = "Gloe (pronounced /ɡloʊ/, like \"glow\") is a general-purpose library made to help developers create, maintain, document, and test both operational and flow-oriented code."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'typing_extensions~=4.7.1',
    'schemdraw~=0.16',
    'setuptools~=61.2.0',
    'mypy~=1.7.0',
    'networkx~=3.1'
]

[project.urls]
Homepage = "https://gloe.ideos.com.br"
Documentation = "https://gloe.ideos.com.br"
Issues = "https://github.com/ideos/gloe/issues"
Repository = "https://github.com/ideos/gloe"

[tool.pytest.ini_options]
pythonpath = [
  "gloe"
]


